feat(api): update controllers with improved endpoints and validations